@@ -225,6 +225,7 @@
 
   <module id="contacts">
     <maintainer id="chrisl"/>
+    <maintainer id="thos"/>
     <branch id="HEAD"/>
   </module>
 
@@ -2013,7 +2014,7 @@
   </module>
 
   <module id="tasks">
-    <maintainer id="chrisl"/>
+    <maintainer id="rburton"/>
     <branch id="HEAD"/>
   </module>
 
