@@ -186,18 +186,24 @@
     <icon>http://planet.gnome.org/heads/owen3.png</icon>
     <nick>otaylor</nick>
   </person>
-  <person id="rslinckx">
-    <name>Raphaël Slinckx</name>
-    <email>raphael@slinckx.net</email>
-    <icon>http://planet.gnome.org/heads/kikidonk.png</icon>
-    <nick>kikidonk</nick>
-    <webpage>http://raphael.slinckx.net/</webpage>
+  <person id="rburton">
+    <name>Ross Burton</name>
+    <email>ross@burtonini.com</email>
+    <webpage>http://www.burtonini.com/blog/</webpage>
+    <icon>http://planet.gnome.org/heads/ross.png</icon>
   </person>
   <person id="rhult">
     <name>Richard Hult</name>
     <email>richard@imendio.com</email>
     <webpage>http://people.imendio.com/richard/</webpage>
     <nick>rhult</nick>
+  </person>
+  <person id="rslinckx">
+    <name>Raphaël Slinckx</name>
+    <email>raphael@slinckx.net</email>
+    <icon>http://planet.gnome.org/heads/kikidonk.png</icon>
+    <nick>kikidonk</nick>
+    <webpage>http://raphael.slinckx.net/</webpage>
   </person>
   <person id="shaunm">
     <name>Shaun McCance</name>
@@ -218,6 +224,12 @@
     <nick>svu</nick>
     <webpage>http://www.advogato.org/person/svu/</webpage>
     <icon>http://planet.gnome.org/heads/svu.png</icon>
+  </person>
+  <person id="thos">
+    <name>Thomas Wood</name>
+    <email>thomas@openedhand.com</email>
+    <nick>thos</nick>
+    <webpage>http://blogs.gnome.org/thos</webpage>
   </person>
   <person id="twatkins">
     <name>Travis Watkins</name>
