@@ -1,3 +1,10 @@
+2008-10-20  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	Added Ross and Thomas as maintainers.
+	* people.xml.in:
+	Added Ross and Thomas.
+
 2008-10-19  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
